--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
     "map": [
       ["./app/code/community/German/LocalePackNl", "./app/code/community/German/LocalePackNl"],
       ["./app/etc/modules/German_LocalePackNl.xml", "./app/etc/modules/German_LocalePackNl.xml"],
+      ["./downloader/template_nl_1.5", "./downloader/template_nl_1.5"],
+      ["./downloader/template_nl_1.7", "./downloader/template_nl_1.7"],
       ["./app/locale/de_DE/German_LocaleNl.csv", "./app/locale/de_DE/German_LocaleNl.csv"],
       ["./app/locale/en_US/German_LocaleNl.csv", "./app/locale/en_US/German_LocaleNl.csv"],
       ["./app/locale/nl_NL/German_LocaleNl.csv", "./app/locale/nl_NL/German_LocaleNl.csv"]
