--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,51 @@
       ["./js/tiny_mce/themes/advanced/langs/nl.js", "./js/tiny_mce/themes/advanced/langs/nl.js"],
       ["./js/tiny_mce/themes/advanced/langs/nl_dlg.js", "./js/tiny_mce/themes/advanced/langs/nl_dlg.js"],
       ["./js/tiny_mce/themes/simple/langs/nl.js", "./js/tiny_mce/themes/simple/langs/nl.js"],
+      ["./app/locale/nl_NL/template", "./app/locale/nl_NL/template"],
+      ["./app/locale/nl_NL/template/email", "./app/locale/nl_NL/template/email"],
+      ["./app/locale/nl_NL/template/email/account_new_confirmation.html", "./app/locale/nl_NL/template/email/account_new_confirmation.html"],
+      ["./app/locale/nl_NL/template/email/account_new_confirmed.html", "./app/locale/nl_NL/template/email/account_new_confirmed.html"],
+      ["./app/locale/nl_NL/template/email/account_new.html", "./app/locale/nl_NL/template/email/account_new.html"],
+      ["./app/locale/nl_NL/template/email/account_password_reset_confirmation.html", "./app/locale/nl_NL/template/email/account_password_reset_confirmation.html"],
+      ["./app/locale/nl_NL/template/email/admin_password_new.html", "./app/locale/nl_NL/template/email/admin_password_new.html"],
+      ["./app/locale/nl_NL/template/email/admin_password_reset_confirmation.html", "./app/locale/nl_NL/template/email/admin_password_reset_confirmation.html"],
+      ["./app/locale/nl_NL/template/email/contact_form.html", "./app/locale/nl_NL/template/email/contact_form.html"],
+      ["./app/locale/nl_NL/template/email/currency_update_warning.html", "./app/locale/nl_NL/template/email/currency_update_warning.html"],
+      ["./app/locale/nl_NL/template/email/log_clean_warning.html", "./app/locale/nl_NL/template/email/log_clean_warning.html"],
+      ["./app/locale/nl_NL/template/email/moneybookers_activateemail.html", "./app/locale/nl_NL/template/email/moneybookers_activateemail.html"],
+      ["./app/locale/nl_NL/template/email/newsletter_subscr_confirm.html", "./app/locale/nl_NL/template/email/newsletter_subscr_confirm.html"],
+      ["./app/locale/nl_NL/template/email/newsletter_subscr_success.html", "./app/locale/nl_NL/template/email/newsletter_subscr_success.html"],
+      ["./app/locale/nl_NL/template/email/newsletter_unsub_success.html", "./app/locale/nl_NL/template/email/newsletter_unsub_success.html"],
+      ["./app/locale/nl_NL/template/email/password_new.html", "./app/locale/nl_NL/template/email/password_new.html"],
+      ["./app/locale/nl_NL/template/email/payment_failed.html", "./app/locale/nl_NL/template/email/payment_failed.html"],
+      ["./app/locale/nl_NL/template/email/product_alert_cron_error.html", "./app/locale/nl_NL/template/email/product_alert_cron_error.html"],
+      ["./app/locale/nl_NL/template/email/product_price_alert.html", "./app/locale/nl_NL/template/email/product_price_alert.html"],
+      ["./app/locale/nl_NL/template/email/product_share.html", "./app/locale/nl_NL/template/email/product_share.html"],
+      ["./app/locale/nl_NL/template/email/product_stock_alert.html", "./app/locale/nl_NL/template/email/product_stock_alert.html"],
+      ["./app/locale/nl_NL/template/email/sitemap_generate_warning.html", "./app/locale/nl_NL/template/email/sitemap_generate_warning.html"],
+      ["./app/locale/nl_NL/template/email/token.html", "./app/locale/nl_NL/template/email/token.html"],
+      ["./app/locale/nl_NL/template/email/wishlist_share.html", "./app/locale/nl_NL/template/email/wishlist_share.html"],
+      ["./app/locale/nl_NL/template/email/sales", "./app/locale/nl_NL/template/email/sales"],
+      ["./app/locale/nl_NL/template/email/sales/creditmemo_new_guest.html", "./app/locale/nl_NL/template/email/sales/creditmemo_new_guest.html"],
+      ["./app/locale/nl_NL/template/email/sales/creditmemo_new.html", "./app/locale/nl_NL/template/email/sales/creditmemo_new.html"],
+      ["./app/locale/nl_NL/template/email/sales/creditmemo_update_guest.html", "./app/locale/nl_NL/template/email/sales/creditmemo_update_guest.html"],
+      ["./app/locale/nl_NL/template/email/sales/creditmemo_update.html", "./app/locale/nl_NL/template/email/sales/creditmemo_update.html"],
+      ["./app/locale/nl_NL/template/email/sales/invoice_new_guest.html", "./app/locale/nl_NL/template/email/sales/invoice_new_guest.html"],
+      ["./app/locale/nl_NL/template/email/sales/invoice_new.html", "./app/locale/nl_NL/template/email/sales/invoice_new.html"],
+      ["./app/locale/nl_NL/template/email/sales/invoice_update_guest.html", "./app/locale/nl_NL/template/email/sales/invoice_update_guest.html"],
+      ["./app/locale/nl_NL/template/email/sales/invoice_update.html", "./app/locale/nl_NL/template/email/sales/invoice_update.html"],
+      ["./app/locale/nl_NL/template/email/sales/order_new_guest.html", "./app/locale/nl_NL/template/email/sales/order_new_guest.html"],
+      ["./app/locale/nl_NL/template/email/sales/order_new.html", "./app/locale/nl_NL/template/email/sales/order_new.html"],
+      ["./app/locale/nl_NL/template/email/sales/order_update_guest.html", "./app/locale/nl_NL/template/email/sales/order_update_guest.html"],
+      ["./app/locale/nl_NL/template/email/sales/order_update.html", "./app/locale/nl_NL/template/email/sales/order_update.html"],
+      ["./app/locale/nl_NL/template/email/sales/shipment_new_guest.html", "./app/locale/nl_NL/template/email/sales/shipment_new_guest.html"],
+      ["./app/locale/nl_NL/template/email/sales/shipment_new.html", "./app/locale/nl_NL/template/email/sales/shipment_new.html"],
+      ["./app/locale/nl_NL/template/email/sales/shipment_update_guest.html", "./app/locale/nl_NL/template/email/sales/shipment_update_guest.html"],
+      ["./app/locale/nl_NL/template/email/sales/shipment_update.html", "./app/locale/nl_NL/template/email/sales/shipment_update.html"],
+      ["./app/locale/nl_NL/template/email/html", "./app/locale/nl_NL/template/email/html"],
+      ["./app/locale/nl_NL/template/email/html/footer.html", "./app/locale/nl_NL/template/email/html/footer.html"],
+      ["./app/locale/nl_NL/template/email/html/header.html", "./app/locale/nl_NL/template/email/html/header.html"],
+      ["./app/locale/nl_NL/template/email/html/support.html", "./app/locale/nl_NL/template/email/html/support.html"],
       ["./app/locale/de_DE/German_LocaleNl.csv", "./app/locale/de_DE/German_LocaleNl.csv"],
       ["./app/locale/en_US/German_LocaleNl.csv", "./app/locale/en_US/German_LocaleNl.csv"],
       ["./app/locale/nl_NL/German_LocaleNl.csv", "./app/locale/nl_NL/German_LocaleNl.csv"]
